2016/10/12 進捗 問2.33 ~ 36 次回P71から

--- a/chap2.ipynb
+++ b/chap2.ipynb
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -814,7 +814,7 @@
     "(define (append l1 l2)\n",
     "  (if (null? l1)\n",
     "    l2\n",
-    "    (cons (car list1) (append (cdr l1) l2))))\n"
+    "    (cons (car l1) (append (cdr l1) l2))))\n"
    ]
   },
   {
@@ -1022,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -1585,6 +1585,403 @@
     "          (cons f (next (+ k 1)))\n",
     "          (next (+ k 1))))))\n",
     "  (next 0))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " filter\r\n",
+      " #<undef>\r\n",
+      " test filter odd 1 2 3 4 5, expects (1 3 5) ==> ok\r\n",
+      "#<undef>\r\n",
+      " accumulate\r\n",
+      " test acc + 0, expects 15 ==> ok\r\n",
+      "#<undef>\r\n",
+      " test acc * 1, expects 120 ==> ok\r\n",
+      "#<undef>\r\n",
+      " test acc cons nil, expects (1 2 3 4 5) ==> ok\r\n",
+      "#<undef>\r\n",
+      " enumerate-interval\r\n",
+      " test enumerate 2 7, expects (2 3 4 5 6 7) ==> ok\r\n",
+      "#<undef>\r\n",
+      " enumerate-tree\r\n",
+      " test enumerate-tree, expects (1 2 3 4 5) ==> ok\r\n",
+      "#<undef>\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "(define (filter predicate sequence)\n",
+    "  (cond ((null? sequence) '())\n",
+    "        ((predicate (car sequence))\n",
+    "         (cons (car sequence)\n",
+    "              (filter predicate (cdr sequence))))\n",
+    "  (else (filter predicate (cdr sequence)))))\n",
+    "\n",
+    "(use gauche.test)\n",
+    "\n",
+    "(test \"filter odd 1 2 3 4 5\" (list 1 3 5) (lambda () (filter odd? (list 1 2 3 4 5))))\n",
+    "\n",
+    "(define (accumulate op initial sequence)\n",
+    "  (if (null? sequence)\n",
+    "      initial\n",
+    "      (op (car sequence)\n",
+    "          (accumulate op initial (cdr sequence)))\n",
+    "      ))\n",
+    "\n",
+    "(test \"acc + 0\" 15 (^[] (accumulate + 0 (list 1 2 3 4 5))))\n",
+    "\n",
+    "(test \"acc * 1\" 120 (^[] (accumulate * 1 (list 1 2 3 4 5))))\n",
+    "\n",
+    "(test \"acc cons nil\" (list 1 2 3 4 5) (^[] (accumulate cons '() (list 1 2 3 4 5))))\n",
+    "\n",
+    "(define (enumerate-interval low high)\n",
+    "  (if (> low high) \n",
+    "      '() \n",
+    "      (cons low (enumerate-interval (+ low 1) high))\n",
+    "      ))\n",
+    "\n",
+    "(test \"enumerate 2 7\" (list 2 3 4 5 6 7) (^[] (enumerate-interval 2 7)))\n",
+    "\n",
+    "(define (enumerate-tree tree)\n",
+    "  (cond ((null? tree) '())\n",
+    "        ((not (pair? tree)) (list tree))\n",
+    "        (else (append (enumerate-tree (car tree))\n",
+    "                      (enumerate-tree (cdr tree))))))\n",
+    "\n",
+    "(test \"enumerate-tree\" (list 1 2 3 4 5) (^[] (enumerate-tree (list 1 (list 2 (list 3 4)) 5))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " sum-odd-squares\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "(define (sum-odd-squares tree)\n",
+    "  (accumurate +\n",
+    "              0\n",
+    "              (map square\n",
+    "                   (filter odd? \n",
+    "                           (enumerate-tree tree)))))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " even-fibs\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "(define (even-fibs n)\n",
+    "  (accumulate cons\n",
+    "              '()\n",
+    "              (filter even?\n",
+    "                      (map fib\n",
+    "                           (enumerate-interval 0 n)))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " fib\r\n",
+      " fib-iter\r\n",
+      " list-fib-squares\r\n",
+      " #<undef>\r\n",
+      " test flist-fib 10, expects (0 1 1 4 9 25 64 169 441 1156 3025) ==> ok\r\n",
+      "#<undef>\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "(define (fib n)\n",
+    "  (fib-iter 1 0 n)\n",
+    "  )\n",
+    "\n",
+    "(define (fib-iter a1 a0 max)\n",
+    "  (if (= 0 max)\n",
+    "    a0\n",
+    "    (fib-iter (+ a1 a0) a1 (- max 1)))\n",
+    "  )\n",
+    "\n",
+    "(define (list-fib-squares n)\n",
+    "  (accumulate cons \n",
+    "              '()\n",
+    "              (map square\n",
+    "                   (map fib\n",
+    "                        (enumerate-interval 0 n)))))\n",
+    "\n",
+    "(use gauche.test)\n",
+    "\n",
+    "(test \"flist-fib 10\" \n",
+    "      (list 0 1 1 4 9 25 64 169 441 1156 3025) \n",
+    "      (^[] (list-fib-squares 10)))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "プログラムを並びの演算として表す価値は比較的独立な部品を組み合わせて作り上げる設計を可能とすること  \n",
+    "これらの部品を柔軟に接続するための公認インターフェースを用意することで部品化された設計を奨励する  \n",
+    "らしい  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 問題 2.33"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " accumulate\r\n",
+      " map\r\n",
+      " append\r\n",
+      " length\r\n",
+      " test map + 1, expects (1 2 3) ==> ok\r\n",
+      "#<undef>\r\n",
+      " test append (1 2) (3 4), expects (1 2 3 4) ==> ok\r\n",
+      "#<undef>\r\n",
+      " test length (1 2 3), expects 3 ==> ok\r\n",
+      "#<undef>\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "(define (accumulate op initial sequence)\n",
+    "  (if (null? sequence)\n",
+    "      initial\n",
+    "      (op (car sequence)\n",
+    "          (accumulate op initial (cdr sequence)))\n",
+    "      ))\n",
+    "\n",
+    "(define (map p sequence)\n",
+    "  (accumulate (^[x y] (cons (p x) y)) '() sequence))\n",
+    "\n",
+    "(define (append seq1 seq2)\n",
+    "  (accumulate cons seq2 seq1)\n",
+    "  )\n",
+    "\n",
+    "(define (length sequence)\n",
+    "  (accumulate (^[h t] (+ 1 t)) 0 sequence))\n",
+    "\n",
+    "(test \"map + 1\" (list 1 2 3) (^[] (map (^[x] (+ x 1)) (list 0 1 2))))\n",
+    "\n",
+    "(test \"append (1 2) (3 4)\" (list 1 2 3 4) (^[] (append (list 1 2) (list 3 4))))\n",
+    "\n",
+    "(test \"length (1 2 3)\" 3 (^[] (length (list 1 2 3))))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 問題 2.34"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " accumulate\r\n",
+      " horner-eval\r\n",
+      " test x = 2, expects 79 ==> ok\r\n",
+      "#<undef>\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "(define (accumulate op initial sequence)\n",
+    "  (if (null? sequence)\n",
+    "      initial\n",
+    "      (op (car sequence)\n",
+    "          (accumulate op initial (cdr sequence)))\n",
+    "      ))\n",
+    "\n",
+    "(define (horner-eval x coefficient-sequence)\n",
+    "  (accumulate (^[this-coeff higher-terms] (+ (* x higher-terms) this-coeff))\n",
+    "                0\n",
+    "                coefficient-sequence))\n",
+    "\n",
+    "(test \"x = 2\" 79 (^[] (horner-eval 2 (list 1 3 0 5 0 1))))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 問題 2.35\n",
+    "\n",
+    "わからん・・・\n",
+    "\n",
+    "```\n",
+    "(define (count-leaves t)\n",
+    "  (accumulate (^[h t] (+ t 1))\n",
+    "              0\n",
+    "              (map (^[x] (count-leaves x) t))\n",
+    "  )\n",
+    "\n",
+    "(test \"count-leaves (x x)\" 8 (^[] (count-leaves (list x x))))\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " #<undef>\r\n",
+      " accumulate\r\n",
+      " map\r\n",
+      " x\r\n",
+      " count-leaves\r\n",
+      " test count-leaves x, expects 4 ==> ok\r\n",
+      "#<undef>\r\n",
+      " test count-leaves (x x), expects 8 ==> ok\r\n",
+      "#<undef>\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "(use gauche.test)\n",
+    "\n",
+    "(define (accumulate op initial sequence)\n",
+    "  (if (null? sequence)\n",
+    "      initial\n",
+    "      (op (car sequence)\n",
+    "          (accumulate op initial (cdr sequence)))\n",
+    "      ))\n",
+    "\n",
+    "(define (map p sequence)\n",
+    "  (accumulate (^[x y] (cons (p x) y)) '() sequence))\n",
+    "\n",
+    "(define x (cons (list 1 2) (list 3 4)))\n",
+    "\n",
+    "(define (count-leaves x)\n",
+    "  (cond ((null? x) 0)\n",
+    "        ((not (pair? x)) 1)\n",
+    "        (else (+ (count-leaves (car x))\n",
+    "                 (count-leaves (cdr x))))))\n",
+    "\n",
+    "(test \"count-leaves x\" 4 (^[] (count-leaves x)))\n",
+    "\n",
+    "(test \"count-leaves (x x)\" 8 (^[] (count-leaves (list x x))))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 問題 2.36"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " #<undef>\r\n",
+      " accumulate\r\n",
+      " accumulate-n\r\n",
+      " test accumulate-n + 0 s, expects (22 26 30) ==> ok\r\n",
+      "#<undef>\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "(use gauche.test)\n",
+    "(define (accumulate op initial sequence)\n",
+    "  (if (null? sequence)\n",
+    "      initial\n",
+    "      (op (car sequence)\n",
+    "          (accumulate op initial (cdr sequence)))\n",
+    "      ))\n",
+    "\n",
+    "(define (accumulate-n op init seqs)\n",
+    "  (if (null? (car seqs))\n",
+    "             '()\n",
+    "             (cons (accumulate op init (map car seqs))\n",
+    "                   (accumulate-n op init (map cdr seqs)))))\n",
+    "\n",
+    "(test \"accumulate-n + 0 s\" \n",
+    "      (list 22 26 30) \n",
+    "      (^[] (accumulate-n + 0 (list (list 1 2 3) (list 4 5 6) (list 7 8 9) (list 10 11 12)))))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 問題 2.37 ~ 39\n",
+    "\n",
+    "疲れたので飛ばす  \n",
+    "次回p71 写像の入れ子 デュエルスタンバイ"
    ]
   },
   {
